--- a/bancoforyou/pom.xml
+++ b/bancoforyou/pom.xml
@@ -111,6 +111,11 @@
        <artifactId>poi-ooxml</artifactId>
        <version>5.2.2</version>
     </dependency>
+    <dependency>
+        <groupId>com.mercadopago</groupId>
+        <artifactId>sdk-java</artifactId>
+        <version>2.4.0</version>
+    </dependency>
 
 
 	</dependencies>
