--- a/bancoforyou/src/main/resources/application.properties
+++ b/bancoforyou/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.data.mongodb.database={foryou}
 spring.data.mongodb.uri=mongodb+srv://{env.MONGO_USER}:{MONGO_PASSWORD}@{MONGO_CLUSTER}/?retryWrites=true&w=majority&appName=Cluster0
 spring.security.user.name=foo
 spring.security.user.password=foo
+
+
+#Mercado Pago
+
+mercadopago-access-token = {env.MERCADOPAGO-ACCES-TOKEN}
+mercadopago-notification-url = 
