Resolução de problemas

--- a/bancoforyou/src/main/resources/application.properties
+++ b/bancoforyou/src/main/resources/application.properties
@@ -1,6 +1,23 @@
 
 spring.data.mongodb.database={foryou}
 spring.data.mongodb.uri=mongodb+srv://{env.MONGO_USER}:{MONGO_PASSWORD}@{MONGO_CLUSTER}/?retryWrites=true&w=majority&appName=Cluster0
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+
+# Dialeto do H2 (necessário para JPA/Hibernate)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Cria/atualiza tabelas automaticamente (opcional)
+spring.jpa.hibernate.ddl-auto=update
+
+# Habilita o console do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
 spring.security.user.name=foo
 spring.security.user.password=foo
 
@@ -8,4 +25,5 @@ spring.security.user.password=foo
 #Mercado Pago
 
 mercadopago-access-token = {env.MERCADOPAGO-ACCES-TOKEN}
-mercadopago-notification-url = 
+mercadopago-notification-url = {env.MERCADOPAGO-URI}
+server.port=8080
